--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,5 @@
-# Hi, I'm Your Name
+## Hi, I'm James Nurden
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+ This is my portfolio highlighting my nodejs and reactjs coding development projects in Github.
+ 
+ Project card links and contact details are below.
